[package]
name = "EnemyPE"
version = "1.0.0"
edition = "2021"
authors = ["wanmywann"]
description = "A Rust Loader for x86 and x64 binaries"

[dependencies]
colored = "2"
ureq = "2.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[[bin]]
name = "EnemyPE"
path = "src/main.rs"